--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@ button {
   background: none;
 }
 
+.label {
+  background-color: #3DC47E;
+  border-radius: 3px;
+  padding: 5px 12px;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FFFFFF;
+}
+
 .header {
   padding: 15px 0;
   background-color: #fff;
@@ -51,4 +60,33 @@ button {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 10px;
+}
+
+.slider {
+  position: relative;
+  padding: 90px 0 100px;
+  background: #B4D1E0 url("../img/image-064.png") no-repeat center right 23%/contain;
+}
+.slider__title {
+  color: #262D33;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 70px;
+  font-family: "Roboto Slab", sans-serif;
+  margin: 20px 0 15px;
+}
+.slider__desc {
+  font-size: 18px;
+  line-height: 30px;
+  color: #4B5157;
+  max-width: 335px;
+  margin-bottom: 40px;
+}
+.slider__nav {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
 }/*# sourceMappingURL=style.css.map */
