--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    // border: 1px solid red;
+    border: 1px solid red;
 
 }
 
@@ -30,6 +30,17 @@ button {
 }
 
 .nav {
+    @media(max-width: 600px) {
+        margin-top: 30px;
+    }
+
+    &__list {
+        @media(max-width: 600px) {
+            flex-direction: column; 
+            gap: 10px;
+        }
+    }
+
     &__item {
         list-style-type: none;
     }
@@ -65,6 +76,10 @@ button {
     padding: 90px 0 100px;
     background: #B4D1E0 url('../img/image-064.png') no-repeat center right 23% / contain; //расположение фон: //
 
+    @media(max-width: 600px) {
+        padding: 30px 0 ;
+     }
+
     &__title {
         color: #262D33;
         font-weight: 700;
@@ -74,13 +89,23 @@ button {
         margin: 20px 0 15px;
     }
 
+    @media(max-width: 600px) {
+       font-size: 32px;
+    }
+
     &__desc {
         font-size: 18px;
         line-height: 30px;
         color: #4B5157;
         max-width: 335px;
         margin-bottom: 40px;
+
+        @media(max-width: 600px) {
+            font-size: 16px;
+         }
     }
+
+
 
     &__nav {
         position: absolute;
@@ -88,6 +113,8 @@ button {
         top: 50%;
         transform: translateY(-50%);
         opacity: 0.5;
+        z-index: 10;
+        cursor: pointer;
     }
 }
 
@@ -222,19 +249,27 @@ button {
 .footer {
     background-color: #8F79D4;
     padding: 45px 0;
-   
+
+    &__list {
+        @media(max-width: 600px) {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
     &__info {
         list-style-type: none;
+
     }
-    
+
     &__decoration {
         font-weight: 400;
         font-size: 14px;
         line-height: 20px;
         color: #E7D9FF;
     }
-    
-    &__link{
+
+    &__link {
         font-weight: 900;
         font-size: 14px;
         line-height: 20px;
@@ -244,13 +279,18 @@ button {
 
     &__partners {
         gap: 25px;
+
+
+        @media(max-width:768px) {
+            justify-content: center;
+        }
     }
 
     &__img {
         object-fit: contain;
     }
 
-    &__btn{
+    &__btn {
         width: 40px;
         height: 40px;
         border: 1px solid #D8BFFF;
